# sil-kit-pkg

./: .gitignore  README.rst
.github/actions/: Dockerfile  action.yml  build_deb.sh  entrypoint.sh  fetch_cmake.sh
.github/workflows/: package-debian.yml  package-silkit.yml
debian/: changelog  control  copyright  libsilkit-dev.install  libsilkit4.install  libsilkit4.manpages  libsilkit5.install  rules  sil-kit-monitor.1  sil-kit-registry.1  sil-kit-system-controller.1  silkit-utils.install  silkit-utils.silkit-registry.service  watch
debian/upstream/: metadata
rpm/: libsilkit4.spec  libsilkit5.spec
scripts/: build_cfg.json  build_deb.py  silkit_deb.py  silkit_linux_packaging.py  silkit_pkg_interface.py  silkit_pkg_utils.py  silkit_rpm.py
tests/: CMakeLists.txt  test.cpp  test_deb.py
